src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction_diff_review__diff_review_empty_diff.snap
---
source: src/tui/snapshot_tests/interaction_diff_review.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #0 ───────────────────────────────────────────────────────────────────────────────┐"
"└─╔═══════════════════════════════════════════[ Diff review (read-only) ]═══════════════════════════════════════════╗──┘"
" W║╔══════════════════════════════╗╔═══════════════════════════════════════════════════════════════════════════════╗║   "
"  ║║ no changes vs base           ║║                                                                               ║║   "
" N║║                              ║║                                                                               ║║   "
" T║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"─ ║║                              ║║                                                                               ║║/Pg"
"╔═║╚══════════════════════════════╝╚═══════════════════════════════════════════════════════════════════════════════╝║══╗"
"║T║ j/k scroll  Ctrl+d/u page  ]/[ hunk  g/G top/bot  Tab file  / search  n/N next  o shell  q close                ║  ║"
"║ ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
