src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction_diff_review__diff_review_scrolled_state.snap
---
source: src/tui/snapshot_tests/interaction_diff_review.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #0 ───────────────────────────────────────────────────────────────────────────────┐"
"└─╔═══════════════════════════════════════════[ Diff review (read-only) ]═══════════════════════════════════════════╗──┘"
" W║╔══════════════════════════════╗╔═══════════════════════════════════════════════════════════════════════════════╗║   "
"  ║║> src/lib.rs +2 -1            ║║diff --git a/src/lib.rs b/src/lib.rs                                           ║║   "
" N║║                              ║║index 111..222 100644                                                          ║║   "
" T║║                              ║║--- a/src/lib.rs                                                               ║║   "
"  ║║                              ║║+++ b/src/lib.rs                                                               ║║   "
"  ║║                              ║║@@ -1,4 +1,5 @@                                                                ║║   "
"  ║║                              ║║fn keep() {}                                                                   ║║   "
"  ║║                              ║║-fn removed() {}                                                               ║║   "
"  ║║                              ║║+fn added() {}                                                                 ║║   "
"  ║║                              ║║+fn also_added() {}                                                            ║║   "
"  ║║                              ║║fn tail() {}                                                                   ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"─ ║║                              ║║                                                                               ║║/Pg"
"╔═║╚══════════════════════════════╝╚═══════════════════════════════════════════════════════════════════════════════╝║══╗"
"║T║ j/k scroll  Ctrl+d/u page  ]/[ hunk  g/G top/bot  Tab file  / search  n/N next  o shell  q close                ║  ║"
"║ ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
