src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction_diff_review__diff_review_sixteen_files.snap
---
source: src/tui/snapshot_tests/interaction_diff_review.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #0 ───────────────────────────────────────────────────────────────────────────────┐"
"└─╔═══════════════════════════════════════════[ Diff review (read-only) ]═══════════════════════════════════════════╗──┘"
" W║╔══════════════════════════════╗╔═══════════════════════════════════════════════════════════════════════════════╗║   "
"  ║║> src/file_00.rs +1 -1        ║║diff --git a/src/file_00.rs b/src/file_00.rs                                   ║║   "
" N║║  src/file_01.rs +1 -1        ║║index 111..222 100644                                                          ║║   "
" T║║  src/file_02.rs +1 -1        ║║--- a/src/file_00.rs                                                           ║║   "
"  ║║  src/file_03.rs +1 -1        ║║+++ b/src/file_00.rs                                                           ║║   "
"  ║║  src/file_04.rs +1 -1        ║║@@ -1,2 +1,2 @@                                                                ║║   "
"  ║║  src/file_05.rs +1 -1        ║║-old line 0                                                                    ║║   "
"  ║║  src/file_06.rs +1 -1        ║║+new line 0                                                                    ║║   "
"  ║║  src/file_07.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_08.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_09.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_10.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_11.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_12.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_13.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_14.rs +1 -1        ║║                                                                               ║║   "
"  ║║  src/file_15.rs +1 -1        ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"  ║║                              ║║                                                                               ║║   "
"─ ║║                              ║║                                                                               ║║/Pg"
"╔═║╚══════════════════════════════╝╚═══════════════════════════════════════════════════════════════════════════════╝║══╗"
"║T║ j/k scroll  Ctrl+d/u page  ]/[ hunk  g/G top/bot  Tab file  / search  n/N next  o shell  q close                ║  ║"
"║ ╚═════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝  ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
